test/corpus/types.txt
================================================
integer attribute
================================================

netcdf basic {
    variables:
        float a ;

        // attributes
        int a:attr_i = 1;
}

---

(dataset
  (dataset_id)
  (variables_section
    (variable_declarations
      type: (type)
      (variable
        name: (identifier)))
      (comment)
      (attribute
        type: (type)
        variable: (identifier)
        name: (identifier)
        value: (value
          (integer)))))

=========================================================
negative integer attribute
=========================================================

netcdf basic {
    variables:
        float a ;

        // attributes
        int a:attr_i = -1000;
}

---

(dataset
  (dataset_id)
  (variables_section
    (variable_declarations
      type: (type)
      (variable
        name: (identifier)))
      (comment)
      (attribute
        type: (type)
        variable: (identifier)
        name: (identifier)
        value: (value
          (integer)))))

=========================================================
unsigned u integer attribute
=========================================================

netcdf basic {
    variables:
        float a ;

        // attributes
        int a:attr_i = 42u;
}

---

(dataset
  (dataset_id)
  (variables_section
    (variable_declarations
      type: (type)
      (variable
        name: (identifier)))
      (comment)
      (attribute
        type: (type)
        variable: (identifier)
        name: (identifier)
        value: (value
          (integer)))))

=========================================================
unsigned U integer attribute
=========================================================

netcdf basic {
    variables:
        float a ;

        // attributes
        int a:attr_i = 42U;
}

---

(dataset
  (dataset_id)
  (variables_section
    (variable_declarations
      type: (type)
      (variable
        name: (identifier)))
      (comment)
      (attribute
        type: (type)
        variable: (identifier)
        name: (identifier)
        value: (value
          (integer)))))

=========================================================
short 16bit integer attribute
=========================================================

netcdf basic {
    variables:
        float a ;

        // attributes
        int a:attr_i = 42s;
}

---

(dataset
  (dataset_id)
  (variables_section
    (variable_declarations
      type: (type)
      (variable
        name: (identifier)))
      (comment)
      (attribute
        type: (type)
        variable: (identifier)
        name: (identifier)
        value: (value
          (integer)))))

=========================================================
short S 16bit integer attribute
=========================================================

netcdf basic {
    variables:
        float a ;

        // attributes
        int a:attr_i = 42S;
}

---

(dataset
  (dataset_id)
  (variables_section
    (variable_declarations
      type: (type)
      (variable
        name: (identifier)))
      (comment)
      (attribute
        type: (type)
        variable: (identifier)
        name: (identifier)
        value: (value
          (integer)))))

=========================================================
long 32bit integer attribute
=========================================================

netcdf basic {
    variables:
        float a ;

        // attributes
        int a:attr_i = 42l;
}

---

(dataset
  (dataset_id)
  (variables_section
    (variable_declarations
      type: (type)
      (variable
        name: (identifier)))
      (comment)
      (attribute
        type: (type)
        variable: (identifier)
        name: (identifier)
        value: (value
          (integer)))))

=========================================================
long L 32bit integer attribute
=========================================================

netcdf basic {
    variables:
        float a ;

        // attributes
        int a:attr_i = 42L;
}

---

(dataset
  (dataset_id)
  (variables_section
    (variable_declarations
      type: (type)
      (variable
        name: (identifier)))
      (comment)
      (attribute
        type: (type)
        variable: (identifier)
        name: (identifier)
        value: (value
          (integer)))))

=========================================================
long long 64bit integer attribute
=========================================================

netcdf basic {
    variables:
        float a ;

        // attributes
        int a:attr_i = 42ll;
}

---

(dataset
  (dataset_id)
  (variables_section
    (variable_declarations
      type: (type)
      (variable
        name: (identifier)))
      (comment)
      (attribute
        type: (type)
        variable: (identifier)
        name: (identifier)
        value: (value
          (integer)))))

=========================================================
long long LL 64bit integer attribute
=========================================================

netcdf basic {
    variables:
        float a ;

        // attributes
        int a:attr_i = 42LL;
}

---

(dataset
  (dataset_id)
  (variables_section
    (variable_declarations
      type: (type)
      (variable
        name: (identifier)))
      (comment)
      (attribute
        type: (type)
        variable: (identifier)
        name: (identifier)
        value: (value
          (integer)))))

=========================================================
unsigned long long 64bit integer attribute
=========================================================

netcdf basic {
    variables:
        float a ;

        // attributes
        int a:attr_i = 42ull;
}

---

(dataset
  (dataset_id)
  (variables_section
    (variable_declarations
      type: (type)
      (variable
        name: (identifier)))
      (comment)
      (attribute
        type: (type)
        variable: (identifier)
        name: (identifier)
        value: (value
          (integer)))))

=========================================================
unsigned long long ULL 64bit integer attribute
=========================================================

netcdf basic {
    variables:
        float a ;

        // attributes
        int a:attr_i = 42ULL;
}

---

(dataset
  (dataset_id)
  (variables_section
    (variable_declarations
      type: (type)
      (variable
        name: (identifier)))
      (comment)
      (attribute
        type: (type)
        variable: (identifier)
        name: (identifier)
        value: (value
          (integer)))))

=========================================================
unsigned uLL long long 64bit integer attribute
=========================================================

netcdf basic {
    variables:
        float a ;

        // attributes
        int a:attr_i = 42uLL;
}

---

(dataset
  (dataset_id)
  (variables_section
    (variable_declarations
      type: (type)
      (variable
        name: (identifier)))
      (comment)
      (attribute
        type: (type)
        variable: (identifier)
        name: (identifier)
        value: (value
          (integer)))))

=========================================================
long long unsigned 64bit integer attribute
:error
// Should pass from spec, but does not in ncgen
=========================================================

netcdf basic {
    variables:
        float a ;

        // attributes
        int a:attr_i = 42llu;
}

---

(dataset
  (dataset_id)
  (variables_section
    (variable_declarations
      type: (type)
      (variable
        name: (identifier)))
      (comment)
      (attribute
        type: (type)
        variable: (identifier)
        name: (identifier)
        value: (value
          (integer)))))

=========================================================
Octal attribute
=========================================================

netcdf basic {
    variables:
        float a ;

        // attributes
        int a:attr_o = 0123;
}

---

(dataset
  (dataset_id)
  (variables_section
    (variable_declarations
      type: (type)
      (variable
        name: (identifier)))
      (comment)
      (attribute
        type: (type)
        variable: (identifier)
        name: (identifier)
        value: (value
          (integer)))))

=========================================================
unsigned Octal attribute
=========================================================

netcdf basic {
    variables:
        float a ;

        // attributes
        int a:attr_o = 0123u;
}

---

(dataset
  (dataset_id)
  (variables_section
    (variable_declarations
      type: (type)
      (variable
        name: (identifier)))
      (comment)
      (attribute
        type: (type)
        variable: (identifier)
        name: (identifier)
        value: (value
          (integer)))))

=========================================================
long long 64bit Octal attribute
=========================================================

netcdf basic {
    variables:
        float a ;

        // attributes
        int a:attr_o = 0123ll;
}

---

(dataset
  (dataset_id)
  (variables_section
    (variable_declarations
      type: (type)
      (variable
        name: (identifier)))
      (comment)
      (attribute
        type: (type)
        variable: (identifier)
        name: (identifier)
        value: (value
          (integer)))))

=========================================================
Hexadecimal attribute
=========================================================

netcdf basic {
    variables:
        float a ;

        // attributes
        int a:attr_o = 0x6f4;
}

---

(dataset
  (dataset_id)
  (variables_section
    (variable_declarations
      type: (type)
      (variable
        name: (identifier)))
      (comment)
      (attribute
        type: (type)
        variable: (identifier)
        name: (identifier)
        value: (value
          (integer)))))

=========================================================
unsigned Hexadecimal attribute
=========================================================

netcdf basic {
    variables:
        float a ;

        // attributes
        int a:attr_o = 0x6f4u;
}

---

(dataset
  (dataset_id)
  (variables_section
    (variable_declarations
      type: (type)
      (variable
        name: (identifier)))
      (comment)
      (attribute
        type: (type)
        variable: (identifier)
        name: (identifier)
        value: (value
          (integer)))))

=========================================================
long long 64bit Hexadecimal attribute
=========================================================

netcdf basic {
    variables:
        float a ;

        // attributes
        int a:attr_o = 0x6f4ll;
}

---

(dataset
  (dataset_id)
  (variables_section
    (variable_declarations
      type: (type)
      (variable
        name: (identifier)))
      (comment)
      (attribute
        type: (type)
        variable: (identifier)
        name: (identifier)
        value: (value
          (integer)))))

================================================
float attribute
================================================

netcdf basic {
    variables:
        float a ;

        // attributes
        int a:attr_f = 3.14159;
}

---

(dataset
  (dataset_id)
  (variables_section
    (variable_declarations
      type: (type)
      (variable
        name: (identifier)))
      (comment)
      (attribute
        type: (type)
        variable: (identifier)
        name: (identifier)
        value: (value
          (float)))))

================================================
float attribute negative
================================================

netcdf basic {
    variables:
        float a ;

        // attributes
        int a:attr_f = -3.14159;
}

---

(dataset
  (dataset_id)
  (variables_section
    (variable_declarations
      type: (type)
      (variable
        name: (identifier)))
      (comment)
      (attribute
        type: (type)
        variable: (identifier)
        name: (identifier)
        value: (value
          (float)))))

================================================
float attribute characteristic and point
================================================

netcdf basic {
    variables:
        float a ;

        // attributes
        int a:attr_f = 3.;
}

---

(dataset
  (dataset_id)
  (variables_section
    (variable_declarations
      type: (type)
      (variable
        name: (identifier)))
      (comment)
      (attribute
        type: (type)
        variable: (identifier)
        name: (identifier)
        value: (value
          (float)))))

================================================
float attribute point and mantissa
================================================

netcdf basic {
    variables:
        float a ;

        // attributes
        int a:attr_f = .14159;
}

---

(dataset
  (dataset_id)
  (variables_section
    (variable_declarations
      type: (type)
      (variable
        name: (identifier)))
      (comment)
      (attribute
        type: (type)
        variable: (identifier)
        name: (identifier)
        value: (value
          (float)))))

================================================
float attribute scientific notation
================================================

netcdf basic {
    variables:
        float a ;

        // attributes
        int a:attr_f = 10.24356e25;
}

---

(dataset
  (dataset_id)
  (variables_section
    (variable_declarations
      type: (type)
      (variable
        name: (identifier)))
      (comment)
      (attribute
        type: (type)
        variable: (identifier)
        name: (identifier)
        value: (value
          (float)))))

================================================
float attribute scientific notation upper E
================================================

netcdf basic {
    variables:
        float a ;

        // attributes
        int a:attr_f = 10.24356E25;
}

---

(dataset
  (dataset_id)
  (variables_section
    (variable_declarations
      type: (type)
      (variable
        name: (identifier)))
      (comment)
      (attribute
        type: (type)
        variable: (identifier)
        name: (identifier)
        value: (value
          (float)))))

================================================
float attribute scientific notation negative exponent
================================================

netcdf basic {
    variables:
        float a ;

        // attributes
        int a:attr_f = 10.24356e-25;
}

---

(dataset
  (dataset_id)
  (variables_section
    (variable_declarations
      type: (type)
      (variable
        name: (identifier)))
      (comment)
      (attribute
        type: (type)
        variable: (identifier)
        name: (identifier)
        value: (value
          (float)))))

================================================
float attribute scientific notation negative exponent
================================================

netcdf basic {
    variables:
        float a ;

        // attributes
        int a:attr_f = 10.24356e-25;
}

---

(dataset
  (dataset_id)
  (variables_section
    (variable_declarations
      type: (type)
      (variable
        name: (identifier)))
      (comment)
      (attribute
        type: (type)
        variable: (identifier)
        name: (identifier)
        value: (value
          (float)))))

================================================
float attribute scientific notation characteristic point
================================================

netcdf basic {
    variables:
        float a ;

        // attributes
        int a:attr_f = 10.e25;
}

---

(dataset
  (dataset_id)
  (variables_section
    (variable_declarations
      type: (type)
      (variable
        name: (identifier)))
      (comment)
      (attribute
        type: (type)
        variable: (identifier)
        name: (identifier)
        value: (value
          (float)))))

================================================
float attribute scientific notation characteristic
================================================

netcdf basic {
    variables:
        float a ;

        // attributes
        int a:attr_f = 10e25;
}

---

(dataset
  (dataset_id)
  (variables_section
    (variable_declarations
      type: (type)
      (variable
        name: (identifier)))
      (comment)
      (attribute
        type: (type)
        variable: (identifier)
        name: (identifier)
        value: (value
          (float)))))

================================================
float attribute scientific notation mantissa
================================================

netcdf basic {
    variables:
        float a ;

        // attributes
        int a:attr_f = .14159e25;
}

---

(dataset
  (dataset_id)
  (variables_section
    (variable_declarations
      type: (type)
      (variable
        name: (identifier)))
      (comment)
      (attribute
        type: (type)
        variable: (identifier)
        name: (identifier)
        value: (value
          (float)))))

================================================
float attribute F suffix
================================================

netcdf basic {
    variables:
        float a ;

        // attributes
        int a:attr_f = 3.14159F ;
}

---

(dataset
  (dataset_id)
  (variables_section
    (variable_declarations
      type: (type)
      (variable
        name: (identifier)))
      (comment)
      (attribute
        type: (type)
        variable: (identifier)
        name: (identifier)
        value: (value
          (float)))))

================================================
float attribute f suffix
================================================

netcdf basic {
    variables:
        float a ;

        // attributes
        int a:attr_f = 3.14159f ;
}

---

(dataset
  (dataset_id)
  (variables_section
    (variable_declarations
      type: (type)
      (variable
        name: (identifier)))
      (comment)
      (attribute
        type: (type)
        variable: (identifier)
        name: (identifier)
        value: (value
          (float)))))

================================================
float attribute D suffix
================================================

netcdf basic {
    variables:
        float a ;

        // attributes
        int a:attr_f = 3.14159D ;
}

---

(dataset
  (dataset_id)
  (variables_section
    (variable_declarations
      type: (type)
      (variable
        name: (identifier)))
      (comment)
      (attribute
        type: (type)
        variable: (identifier)
        name: (identifier)
        value: (value
          (float)))))

================================================
float attribute d suffix
================================================

netcdf basic {
    variables:
        float a ;

        // attributes
        int a:attr_f = 3.14159d ;
}

---

(dataset
  (dataset_id)
  (variables_section
    (variable_declarations
      type: (type)
      (variable
        name: (identifier)))
      (comment)
      (attribute
        type: (type)
        variable: (identifier)
        name: (identifier)
        value: (value
          (float)))))

================================================
float attribute L suffix
================================================

netcdf basic {
    variables:
        float a ;

        // attributes
        int a:attr_f = 3.14159L ;
}

---

(dataset
  (dataset_id)
  (variables_section
    (variable_declarations
      type: (type)
      (variable
        name: (identifier)))
      (comment)
      (attribute
        type: (type)
        variable: (identifier)
        name: (identifier)
        value: (value
          (float)))))

================================================
float attribute l suffix
================================================

netcdf basic {
    variables:
        float a ;

        // attributes
        int a:attr_f = 3.14159l ;
}

---

(dataset
  (dataset_id)
  (variables_section
    (variable_declarations
      type: (type)
      (variable
        name: (identifier)))
      (comment)
      (attribute
        type: (type)
        variable: (identifier)
        name: (identifier)
        value: (value
          (float)))))
================================================
float attribute scientific notation suffix
================================================

netcdf basic {
    variables:
        float a ;

        // attributes
        int a:attr_f = 10e25f;
}

---

(dataset
  (dataset_id)
  (variables_section
    (variable_declarations
      type: (type)
      (variable
        name: (identifier)))
      (comment)
      (attribute
        type: (type)
        variable: (identifier)
        name: (identifier)
        value: (value
          (float)))))


================================================
float attribute Invalid space after point
:error
================================================

netcdf basic {
    variables:
        float a ;

        // attributes
        int a:attr_f = 3. 14159L ;
}

---

================================================
float attribute Invalid space before point
:error
================================================

netcdf basic {
    variables:
        float a ;

        // attributes
        int a:attr_f = 3 .14159L ;
}

---

================================================
float attribute Invalid 'Fortran' D notation
:error
================================================

netcdf basic {
    variables:
        float a ;

        // attributes
        int a:attr_f = 3.14159D10 ;
}

---

================================================
float attribute Invalid space before suffix
:error
================================================

netcdf basic {
    variables:
        float a ;

        // attributes
        int a:attr_f = 3.14159 D ;
}

---

================================================
float attribute Invalid point only
:error
================================================

netcdf basic {
    variables:
        float a ;

        // attributes
        int a:attr_f = . ;
}

---

================================================
float attribute Invalid no scientific exponent
:error
================================================

netcdf basic {
    variables:
        float a ;

        // attributes
        int a:attr_f = 1.0e ;
}

---

================================================
float attribute Invalid scientific exponent no number
:error
================================================

netcdf basic {
    variables:
        float a ;

        // attributes
        int a:attr_f = e-5 ;
}

---

================================================
byte attribute b
================================================

netcdf basic {
    variables:
        float a ;

        // attributes
        byte a:attr_f = 36b;
}

---

(dataset
  (dataset_id)
  (variables_section
    (variable_declarations
      type: (type)
      (variable
        name: (identifier)))
      (comment)
      (attribute
        type: (type)
        variable: (identifier)
        name: (identifier)
        value: (value
          (byte)))))

================================================
byte attribute B
================================================

netcdf basic {
    variables:
        float a ;

        // attributes
        byte a:attr_f = 36B;
}

---

(dataset
  (dataset_id)
  (variables_section
    (variable_declarations
      type: (type)
      (variable
        name: (identifier)))
      (comment)
      (attribute
        type: (type)
        variable: (identifier)
        name: (identifier)
        value: (value
          (byte)))))

================================================
byte attribute 0
================================================

netcdf basic {
    variables:
        float a ;

        // attributes
        byte a:attr_f = 0B;
}

---

(dataset
  (dataset_id)
  (variables_section
    (variable_declarations
      type: (type)
      (variable
        name: (identifier)))
      (comment)
      (attribute
        type: (type)
        variable: (identifier)
        name: (identifier)
        value: (value
          (byte)))))

================================================
byte attribute 255
================================================

netcdf basic {
    variables:
        float a ;

        // attributes
        byte a:attr_f = 255B;
}

---

(dataset
  (dataset_id)
  (variables_section
    (variable_declarations
      type: (type)
      (variable
        name: (identifier)))
      (comment)
      (attribute
        type: (type)
        variable: (identifier)
        name: (identifier)
        value: (value
          (byte)))))

================================================
byte attribute invalid negative
:error
================================================

netcdf basic {
    variables:
        float a ;

        // attributes
        byte a:attr_f = -2B;
}

---

================================================
byte attribute invalid 256
:error
================================================

netcdf basic {
    variables:
        float a ;

        // attributes
        byte a:attr_f = 256B;
}

---

================================================
byte attribute invalid B only
:error
================================================

netcdf basic {
    variables:
        float a ;

        // attributes
        byte a:attr_f = B;
}

---

================================================
char attribute
================================================

netcdf basic {
    variables:
        float a ;

        // attributes
        char a:attr_c = 'a';
}

---

(dataset
  (dataset_id)
  (variables_section
    (variable_declarations
      type: (type)
      (variable
        name: (identifier)))
      (comment)
      (attribute
        type: (type)
        variable: (identifier)
        name: (identifier)
        value: (value
          (char)))))

================================================
char attribute ~
================================================

netcdf basic {
    variables:
        float a ;

        // attributes
        char a:attr_c = '~';
}

---

(dataset
  (dataset_id)
  (variables_section
    (variable_declarations
      type: (type)
      (variable
        name: (identifier)))
      (comment)
      (attribute
        type: (type)
        variable: (identifier)
        name: (identifier)
        value: (value
          (char)))))

================================================
char attribute escaped \n
================================================

netcdf basic {
    variables:
        float a ;

        // attributes
        char a:attr_c = '\n';
}

---

(dataset
  (dataset_id)
  (variables_section
    (variable_declarations
      type: (type)
      (variable
        name: (identifier)))
      (comment)
      (attribute
        type: (type)
        variable: (identifier)
        name: (identifier)
        value: (value
          (char)))))

================================================
char attribute escaped \t
================================================

netcdf basic {
    variables:
        float a ;

        // attributes
        char a:attr_c = '\t';
}

---

(dataset
  (dataset_id)
  (variables_section
    (variable_declarations
      type: (type)
      (variable
        name: (identifier)))
      (comment)
      (attribute
        type: (type)
        variable: (identifier)
        name: (identifier)
        value: (value
          (char)))))

================================================
char attribute non-standard C escape
// accepted by ncgen and cast to single char
================================================

netcdf basic {
    variables:
        float a ;

        // attributes
        char a:attr_c = '\d';
}

---

(dataset
  (dataset_id)
  (variables_section
    (variable_declarations
      type: (type)
      (variable
        name: (identifier)))
      (comment)
      (attribute
        type: (type)
        variable: (identifier)
        name: (identifier)
        value: (value
          (char)))))

================================================
char attribute Octal
================================================

netcdf basic {
    variables:
        float a ;

        // attributes
        char a:attr_c = '\123';
}

---

(dataset
  (dataset_id)
  (variables_section
    (variable_declarations
      type: (type)
      (variable
        name: (identifier)))
      (comment)
      (attribute
        type: (type)
        variable: (identifier)
        name: (identifier)
        value: (value
          (char)))))

================================================
char attribute Hexadecimal
================================================

netcdf basic {
    variables:
        float a ;

        // attributes
        char a:attr_c = '\x7f';
}

---

(dataset
  (dataset_id)
  (variables_section
    (variable_declarations
      type: (type)
      (variable
        name: (identifier)))
      (comment)
      (attribute
        type: (type)
        variable: (identifier)
        name: (identifier)
        value: (value
          (char)))))

================================================
char attribute undefined allowed
================================================

netcdf basic {
    variables:
        float a ;

        // attributes
        char a:attr_c = '\xF3';
}

---

(dataset
  (dataset_id)
  (variables_section
    (variable_declarations
      type: (type)
      (variable
        name: (identifier)))
      (comment)
      (attribute
        type: (type)
        variable: (identifier)
        name: (identifier)
        value: (value
          (char)))))

================================================
char attribute Invalid multiple
:error
================================================

netcdf basic {
    variables:
        float a ;

        // attributes
        char a:attr_c = 'ab';
}

---

================================================
char attribute Invalid no closing quote
:error
================================================

netcdf basic {
    variables:
        float a ;

        // attributes
        char a:attr_c = 'a;
}

---

================================================
char attribute Invalid no closing quote
:error
================================================

netcdf basic {
    variables:
        float a ;

        // attributes
        char a:attr_c = ' ;
}

---
